--- a/styles.css
+++ b/styles.css
@@ -248,6 +248,10 @@ footer{
     p{
         font-size: 20px;
         text-align: center;
+
+        a{
+            color: black;
+        }
     }
 }
 
